--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,12 @@
 FROM python:3
 
+WORKDIR /app
 COPY client/ .
 
-RUN pip3 install --no-cache-dir -r requirements.txt || true
+RUN pip install --no-cache-dir -r requirements.txt || true
+# RUN apt-get update
+# RUN apt-get install -y python3
+# RUN apt-get install -y python3-flask
+# RUN apt-get install -y python3-paho-mqtt
 
 CMD ["python3", "app.py"]
