--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,16 @@
 services:
-  iot_server:
+  server:
     build:
-      context: .
       dockerfile: server/Dockerfile
-    container_name: iot_server
-    hostname: iot_server
-    networks:
-      iot_network:
-        aliases:
-          - iot_server
     ports:
       - "1883:1883"
 
-  iot_client:
+  client:
     build:
-      context: .
       dockerfile: client/Dockerfile
-    container_name: iot_client
-    hostname: iot_client
-    networks:
-      iot_network:
-        aliases:
-          - iot_client
 
-networks:
-  iot_network:
-    driver: bridge
+  broker:
+    build:
+      dockerfile: broker/Dockerfile
+    ports:
+      - "1883:1883"
