--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,10 +1,13 @@
 FROM python:3
 
+WORKDIR /app
 COPY server/ .
 
-RUN pip3 install --no-cache-dir -r requirements.txt || true
-
-# open port
-EXPOSE 1883
+RUN pip install --no-cache-dir -r requirements.txt || true
+# RUN apt-get update
+# RUN apt-get install -y python3
+# RUN apt-get install -y python3-opencv
+# RUN apt-get install -y python3-paho-mqtt
+# RUN apt-get install -y python3-numpy
 
 CMD ["python3", "server.py"]
